testdata/baselines/reference/submodule/compiler/argumentsBindsToFunctionScopeArgumentList(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
argumentsBindsToFunctionScopeArgumentList.ts(1,5): error TS1100: Invalid use of 'arguments' in strict mode.
argumentsBindsToFunctionScopeArgumentList.ts(3,5): error TS1100: Invalid use of 'arguments' in strict mode.
argumentsBindsToFunctionScopeArgumentList.ts(3,5): error TS2322: Type 'number' is not assignable to type 'IArguments'.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== argumentsBindsToFunctionScopeArgumentList.ts (3 errors) ====
    var arguments = 10;
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    function foo(a) {
        arguments = 10;  /// This shouldnt be of type number and result in error.
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        ~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'IArguments'.
    }